# Polaris-Obfuscator

./: README.md  build.sh
examples/1/: example1.cpp
examples/2/: example2.cpp  example2_backend_obfu  example2_ollvm  example2_original
examples/3/: example3.cpp
experiments/exp1/micro-ecc-1.1/: makefile  microECC_ollvm  microECC_polaris  uECC.S  uECC.c
experiments/exp1/monocypher-4.0.2/: makefile  monocypher.pc  monocypher_polaris  test.out
experiments/exp1/monocypher-4.0.2/doc/html/: crypto_aead_lock.html  crypto_aead_write.html  crypto_argon2.html  crypto_blake2b.html  crypto_blake2b_final.html  crypto_chacha20_djb.html  crypto_chacha20_ietf.html  crypto_ed25519_ph_check.html  crypto_ed25519_sign.html  crypto_eddsa_scalarbase.html  crypto_eddsa_sign.html  crypto_elligator_key_pair.html  crypto_elligator_map.html  crypto_poly1305.html  crypto_poly1305_init.html  crypto_sha512.html  crypto_sha512_final.html  crypto_verify16.html  crypto_verify32.html  crypto_wipe.html  crypto_x25519.html  crypto_x25519_public_key.html  intro.html
experiments/exp1/monocypher-4.0.2/doc/man3/: crypto_chacha20_ietf.3monocypher  crypto_eddsa_key_pair.3monocypher  crypto_elligator_rev.3monocypher
experiments/exp1/monocypher-4.0.2/src/: monocypher.c
experiments/exp1/monocypher-4.0.2/tests/: utils.c  utils.h  vectors.h
experiments/exp1/tiny-AES-c-master/: Makefile  aes.c  tinyC_ollvm  tinyC_polaris
experiments/exp2/basic-algorithms/: anagram.c  armstrong.c  binaryadd.c  binarymult.c  binarysearch.c  binarysearchrec.c  comparestrings.c  concatstrings.c  decimaltobinary.c  decimaltohex.c  decimaltooctal.c  factorial.c  factorialrec.c  fib.c  floyd.c  frequency.c  gcd.c  gcdrec.c  insertionsort.c  iofile.c  lcm.c  linearsearch.c  mergesort.c  minmaxarray.c  multtable.c  numtowords.c  palindrome.c  perfect.c  prime.c  printinitials.c  pyramid.c  quicksort.c  reverse.c  romannumerals.c  selectionsort.c  stringtoASCII.c  sumrec.c  vowels.c
experiments/exp3/ccrypt-1.11/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README-WIN  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
experiments/exp3/ccrypt-1.11/check/: Makefile  Makefile.am  Makefile.in  ccrypt-check.sh  common.sh  crypt3-check.c  largefile-check.sh  length-check.sh  rijndael-alg-ref.c  rijndael-alg-ref.h  rijndael-check.c  testdata  testdata.cpt  testdata.m  testdata.ucpt  testdata31
experiments/exp3/ccrypt-1.11/conf16654.dir/: conf16654.file
experiments/exp3/ccrypt-1.11/doc/: Makefile  Makefile.am  Makefile.in  ccguess.1  ccguess.1.in  ccrypt.1  ccrypt.1.in  ccrypt.html  cypfaq01.txt  man2html.sed
experiments/exp3/ccrypt-1.11/emacs/: Makefile  Makefile.am  Makefile.in
experiments/exp3/ccrypt-1.11/intl/: Makefile
experiments/exp3/ccrypt-1.11/m4/: ChangeLog  Makefile  Makefile.am  Makefile.in
experiments/exp3/ccrypt-1.11/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  ccrypt.pot  de.gmo  de.po  et.gmo  et.po  fr.gmo  fr.po
experiments/exp3/ccrypt-1.11/src/: Makefile  Makefile.am  Makefile.in  ccguess  ccguess.c  ccrypt.c  ccrypt.h  ccryptlib.c  getopt.c  lists.h  main.c  main.h  maketables.c  readkey.c  readkey.h  rijndael.c  testfile.cpt  traverse.c  traverse.h  unixcrypt3.c  unixcrypt3.h  unixcryptlib.c  unixcryptlib.h  xalloc.c  xalloc.h
experiments/exp3/ccrypt-1.11/src/.deps/: ccguess.Po  ccrypt.Po  ccryptlib.Po  main.Po  platform.Po  readkey.Po  rijndael.Po  tables.Po  traverse.Po  unixcryptlib.Po  xalloc.Po
experiments/exp3/ccrypt-1.11/src/include/getopt/: getopt.h
experiments/exp3/ccrypt-1.11/src/polaris_encrypt/: ccrypt_gcc  ccrypt_polaris  ccrypt_vmp  compare.py  result.txt  testfile.cpt
experiments/exp3/ccrypt-1.11/src/polaris_main/: ccrypt_gcc  ccrypt_polaris  ccrypt_vmp  result.txt  testfile.cpt
src/: README.txt
src/llvm/include/llvm/IR/: CallingConv.h
src/llvm/include/llvm/MC/: MCSymbol.h
src/llvm/include/llvm/Transforms/Obfuscation/: AliasAccess.h  BogusControlFlow.h  BogusControlFlow2.h  CustomCC.h  Flattening.h  GlobalsEncryption.h  IndirectBranch.h  IndirectCall.h  LLVMVM.h  LinearMBA.h  MBAMatrix.h  MergeFunction.h  Pipeline.h  Substitution.h  Utils.h
src/llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
src/llvm/lib/Transforms/Obfuscation/: AliasAccess.cpp  BogusControlFlow.cpp  BogusControlFlow2.cpp  CMakeLists.txt  CustomCC.cpp  Flattening.cpp  GlobalsEncryption.cpp  IndirectBranch.cpp  IndirectCall.cpp  LinearMBA.cpp  MBAMatrix.cpp  MergeFunction.cpp  Pipeline.cpp  Substitution.cpp  Utils.cpp
src/llvm/lib/Transforms/Scalar/: LoopRerollPass.cpp
