## Copyright (C) 2000-2018 Peter Selinger.
## This file is part of ccrypt. It is free software and it is covered
## by the GNU general public license. See the file COPYING for details.

## Process this file with automake to produce Makefile.in

SUBDIRS = m4 po intl src emacs doc check

EXTRA_DIST = m4/ChangeLog config.rpath README-WIN

TAR = @TAR@

ACLOCAL_AMFLAGS = -I m4
